# file-storage

./: .gitignore  CONTRIBUTING.md  README.md  compose.yaml  debug.json
backend/: Cargo.toml  grpc.Dockerfile  qdrant.Dockerfile  queue.Dockerfile  rest.Dockerfile
backend/app/: Cargo.toml
backend/app/src/: grpc_server.rs  redis_utils.rs  rest_server.rs  utils.rs
backend/observability/: Cargo.toml
backend/observability/src/: lib.rs
backend/proto/: Cargo.toml  build.rs
backend/proto-definitions/: file_storage.proto
backend/proto/src/: lib.rs
backend/proto/src/grpc/: file_storage.rs
backend/qdrant-worker/: Cargo.toml
backend/qdrant-worker/src/: chunking.rs  embeddings.rs  ingestion.rs  queue_worker.rs  server_worker.rs  serving.rs  vectordb.rs
backend/utils/: Cargo.toml
backend/utils/src/: lib.rs
configs/: garage.example.toml  garage.toml
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx  NoAuth.tsx  index.css  main.tsx
frontend/src/auth/: keycloak.ts
frontend/src/client/: api-client.ts  schemas.ts  search-client.ts
frontend/src/components/: banner.tsx  error.tsx  spinner.tsx  table.tsx
frontend/src/pages/: Search.tsx
scripts/: build_images.sh  garage_container_setup.sh
