[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
brakes = { version = "0.1.1", features = ["redis", "tower"] }
proto = { path = "../proto" }
r2d2 = "0.8.10"
redis = { version = "1.2.0", features = ["tokio-comp"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }

[[bin]] # Bin to run the HelloWorld gRPC server
name = "grpc-server"
path = "src/grpc_server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "rest-server"
path = "src/rest_server.rs"
