[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"]}
brakes = { version = "0.1.1", features = ["memcache", "tower"] }
proto = { path = "../proto" }
redis = { version = "1.2.0", features = ["tokio-comp", "r2d2"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tonic = "*"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", features = ["rt-tokio"] }
anyhow = "1.0.102"
memcache = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio-stream = "0.1.18"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"

[[bin]]
name = "grpc-server"
path = "src/grpc_server.rs"

[[bin]]
name = "rest-server"
path = "src/rest_server.rs"
