[package]
name = "proto"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
aws-sdk-s3 = { version = "1.129.0", features = ["rt-tokio"] }
log = "0.4.29"
tracing = "0.1.44"

[build-dependencies]
tonic-prost-build = "*"
