[package]
name = "qdrant-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
qdrant-client = "1.17.0"
serde_json = "1.0.149"
tonic = "0.14.5"
tracing = "0.1.44"
observability = { path = "../observability" }
utils = { path = "../utils" }
brakes = { version = "0.1.1", features = ["memcache", "tower"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
bm25 = { version = "2.3.2", features = ["language_detection"] }
log = "0.4.29"
memchunk = "0.4.0"
rabbitmq-stream-client = "0.11.0"
futures = "0.3.32"
memcache = "0.18.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[[bin]]
name = "queue-worker"
path = "src/queue_worker.rs"

[[bin]]
name = "server-worker"
path = "src/server_worker.rs"
