[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
brakes = { version = "0.1.1", features = ["memcache", "tower"] }
memcache = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
